updated readme file with link to online docs

--- a/README
+++ b/README
@@ -176,6 +176,10 @@ development takes place at:
 
 	     <http://github.com/marcomaggi/atsofa/>
 
+the documentation is available online:
+
+	<http://marcomaggi.github.com/docs/iausofa.html>
+
   The  SOFA libraries  along  with  documentation and  other
 goodies can be found at:
 
